add integration to majufix and handle empty input by disabling the lookup button

--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -37,7 +37,7 @@
                                             <div class="input-group">
                                                 <input ng-model="servicerequest.reporter.account" type="text" name="account" class="form-control" />
                                                 <span class="input-group-btn">
-                                                    <button  ng-click="openLookupModal()" class="btn btn-secondary" type="button"  title="Lookup for customer account details">
+                                                    <button  ng-disabled="!servicerequest.reporter.account" ng-click="openLookupModal()" class="btn btn-secondary" type="button"  title="Lookup for customer account details">
                                                         <i class="icon-magnifier"></i>
                                                     </button>
                                                   </span>
