fix a bug with resolve time for services in overview reports

--- a/app/views/dashboards/overviews/_partials/services_summary.html
+++ b/app/views/dashboards/overviews/_partials/services_summary.html
@@ -100,11 +100,11 @@
                                 </td>
                                 <td>
                                     <span>
-                                      {{overviews.overall.averageResolveTime.hours + (overviews.overall.averageResolveTime.days * 24)}}
+                                      {{service.averageResolveTime.hours + (service.averageResolveTime.days * 24)}}
                                       <span class="text-muted text-xs">hrs</span>
                                     </span>
                                     <span>
-                                        {{service.averageAttendTime.minutes}}
+                                        {{service.averageResolveTime.minutes}}
                                         <span class="text-muted text-xs">mins</span>
                                     </span>
                                 </td>
