fix issue for group and jurisdiction average resolve times bug for overview report

--- a/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
+++ b/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
@@ -104,7 +104,7 @@
                                       <span class="text-muted text-xs">hrs</span>
                                     </span>
                                     <span>
-                                        {{jurisdiction.averageAttendTime.minutes}}
+                                        {{jurisdiction.averageResolveTime.minutes}}
                                         <span class="text-muted text-xs">mins</span>
                                     </span>
                                 </td>
