--- a/app/views/dashboards/overviews/_partials/service_groups_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_groups_summary.html
@@ -109,7 +109,7 @@
                                       <span class="text-muted text-xs">hrs</span>
                                     </span>
                                     <span>
-                                        {{group.averageAttendTime.minutes}}
+                                        {{group.averageResolveTime.minutes}}
                                         <span class="text-muted text-xs">mins</span>
                                     </span>
                                 </td>
