--- a/app/views/account/_partials/statement.html
+++ b/app/views/account/_partials/statement.html
@@ -12,7 +12,7 @@
         <div class="box-body">
 
             <!-- start customer summary details -->
-            <div ng-if="customerAccount" class="item">
+            <div ng-if="account" class="item">
                 <div class="p-a-md">
                     <div class="row m-t">
                         <div class="col-md-12">
@@ -20,7 +20,7 @@
                             <a href="#" class="pull-left m-r-md">
                              <span>
                                <!-- TODO switch between actual image and letter avatar Use base64 uploader -->
-                               <letter-avatar title="{{customerAccount.name}}" data="{{customerAccount.name}}" height="96" width="96" shape="round" color="{{customerAccount.active ? '#63D471':'#EE6352'}}">
+                               <letter-avatar title="{{account.name}}" data="{{account.name}}" height="96" width="96" shape="round" color="{{account.active ? '#63D471':'#EE6352'}}">
                                </letter-avatar>
                                <i class="on b-white"></i>
                              </span>
@@ -32,10 +32,10 @@
                                 <div class="row-col">
                                     <h4 class="m-a-0 m-b-sm">
                                         <!-- start customer name -->
-                                        <span title="Name">{{customerAccount.name}}</span>
+                                        <span title="Name">{{account.name}}</span>
                                         <!-- end customer name -->
                                         <!-- account number -->
-                                        <span class="m-l-sm" title="Account Number">#{{customerAccount.number}}</span>
+                                        <span class="m-l-sm" title="Account Number">#{{account.number}}</span>
                                         <!-- account number -->
                                     </h4>
                                 </div>
@@ -43,7 +43,7 @@
                                 <p class="text-muted m-t-sm">
                                     <i class="fa fa-map-marker m-r-xs"></i>
                                     <span title="Working Area">
-                                      {{customerAccount.fullAddress}}
+                                      {{account.fullAddress}}
                                     </span>
                                 </p>
                                 <!-- end party relations -->
@@ -55,7 +55,7 @@
                                       </a>
                                       <!-- TODO should initiate call -->
                                       <span title="Phone Number"  class="text-muted">
-                                        {{customerAccount.phone ? customerAccount.phone : 'N/A'}}
+                                        {{account.phone ? account.phone : 'N/A'}}
                                       </span>
                                     </span>
                                     <span class="m-l-md">
@@ -65,7 +65,7 @@
                                       </a>
                                        <!-- TODO should initiate email -->
                                       <span title="Email Address" class="text-muted">
-                                        {{customerAccount.email ? customerAccount.email : 'N/A'}}
+                                        {{account.email ? account.email : 'N/A'}}
                                       </span>
                                     </span>
                                     <span class="m-l-md">
@@ -88,13 +88,13 @@
             <!-- end customer summary details -->
 
             <!-- customer bill -->
-            <div ng-if="customerAccount" class="row m-t-lg">
+            <div ng-if="account" class="row m-t-lg">
                 <div class="box box-shadow-z2">
                     <div class="box-header">
-                        <h2>Mini Statement <span class="pull-right">Amount Due: {{customerAccount.outstandingBalance | currency:'Tsh '}}</span></h2>
+                        <h2>Mini Statement <span class="pull-right">Amount Due: {{account.outstandingBalance | currency:'Tsh '}}</span></h2>
                     </div>
                 </div>
-                <div class="list box box-shadow-z2" ng-repeat="bill in customerAccount.bills">
+                <div class="list box box-shadow-z2" ng-repeat="bill in account.bills">
                     <div class="box-header b-b">
                         <h2>{{bill.period.billedAt | date:'MMMM yyyy'}} <small class="pull-right text-muted text-sm">Date of Reading: {{bill.period.billedAt | date:'dd/MM/yyyy'}}</small></h2>
                     </div>
@@ -137,7 +137,7 @@
 
             <!-- account not found details -->
             <div class="row-col">
-                <div ng-if="!customerAccount" class="row-cell v-m">
+                <div ng-if="!account" class="row-cell v-m">
                     <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
                         <p class="text-muted m-y-lg">Account Not Found</p>
                     </div>
