Refactor:  Rename account states
Change account states from accountModal to account to improve consistence and
readability

--- a/app/views/account/_partials/account_details.html
+++ b/app/views/account/_partials/account_details.html
@@ -74,7 +74,7 @@
                                           <i class="icon-list light-blue"></i>
                                         </a>
                                         <!-- TODO should initiate email -->
-                                        <a ui-sref="accountModal.accessors" title="Account Accessors" class="text-muted">
+                                        <a ui-sref="account.accessors" title="Account Accessors" class="text-muted">
                                             View Account Accessors
                                         </a>
                                     </span>
