--- a/app/views/account/_partials/create.html
+++ b/app/views/account/_partials/create.html
@@ -7,6 +7,7 @@
 </div>
 <!-- end modal header -->
 
+<!-- modal body -->
 <div class="modal-body">
     <!-- account accessors list -->
     <div class="box">
@@ -27,10 +28,9 @@
             </form>
         </div>
     </div>
+    <!-- end account accessor list -->
 </div>
-
-<!-- end account accessors list -->
-</div>
+<!-- end modal body -->
 
 <!-- start filter footer -->
 <div class="modal-footer">
