fix resolve time template

--- a/app/views/dashboards/overviews/_partials/services_summary.html
+++ b/app/views/dashboards/overviews/_partials/services_summary.html
@@ -99,12 +99,13 @@
                                     </span>
                                 </td>
                                 <td>
+                                    <!-- Fix here-->
                                     <span>
                                       {{overviews.overall.averageResolveTime.hours + (overviews.overall.averageResolveTime.days * 24)}}
                                       <span class="text-muted text-xs">hrs</span>
                                     </span>
                                     <span>
-                                        {{service.averageAttendTime.minutes}}
+                                        {{service.averageResolveTime.minutes}}
                                         <span class="text-muted text-xs">mins</span>
                                     </span>
                                 </td>
