Refactor: Remove unused codes and update comments

--- a/app/views/account/_partials/account_details.html
+++ b/app/views/account/_partials/account_details.html
@@ -136,6 +136,7 @@
                                         </div>
                                         <!-- end bill item -->
                                     </p>
+                                    <!-- bill balance summary -->
                                     <p class="_500">
                                         <div>
                                             <span>Open Balance</span>
@@ -154,9 +155,12 @@
                                             <small class="text-muted pull-right">{{bill.balance.close | currency:'Tsh '}}</small>
                                         </div>
                                     </p>
+                                    <!-- end bill balance summary -->
+                                    <!-- bill notes -->
                                     <p class="_500 text-muted">
                                         Note:&nbsp;{{bill.notes}}
                                     </p>
+                                    <!-- end bill notes -->
                                 </div>
                             </div>
                         </div>
