--- a/app/views/auth/profile.html
+++ b/app/views/auth/profile.html
@@ -6,6 +6,19 @@
             Profile
         </div>
         <!-- end report title -->
+
+        <!-- start report actions -->
+        <ul class="nav navbar-nav pull-right">
+
+          <!-- start filter -->
+          <li class="nav-item">
+              <a ng-click="showFilter()" class="nav-link" aria-expanded="false" title="Click to Filter Report">
+                <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
+              </a>
+          </li>
+          <!-- end filter -->
+      </ul>
+      <!-- end report actions -->
     </div>
 </div>
 <!-- end profile header -->
